# cameo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  README.md  RELEASING.md  TESTING.md  build.rs  justfile  lefthook.yaml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
examples/: anilist_search.rs  anilist_showcase.rs  cache_showcase.rs  caching.rs  discover.rs  error_handling.rs  facade_showcase.rs  movie_details.rs  recommendations.rs  search_movies.rs  season_details.rs  tmdb_lowlevel.rs  trending.rs  unified_search.rs  watch_providers.rs
openapi/: tmdb-api.json
scripts/: fetch-openapi.sh
src/: lib.rs
src/cache/: backend.rs  key.rs  mod.rs  sqlite.rs
src/core/: config.rs  error.rs  mod.rs  pagination.rs
src/providers/: mod.rs
src/providers/anilist/: client.rs  config.rs  error.rs  mod.rs  query.rs  response.rs
src/providers/tmdb/: client.rs  config.rs  error.rs  image_url.rs  mod.rs
src/providers/tmdb/builders/: discover_movies.rs  discover_tv.rs  mod.rs
src/providers/tmdb/ext/: mod.rs
src/unified/: facade.rs  genre.rs  mod.rs  models.rs  traits.rs
src/unified/conversions/: anilist.rs  mod.rs  tmdb.rs
src/unified/conversions/anilist/: media.rs  mod.rs  person.rs
src/unified/conversions/tmdb/: mod.rs  movie.rs  person.rs  tv.rs
src/unified/facade/: detail.rs  discovery.rs  mod.rs  recommendation.rs  search.rs  season.rs  watch_providers.rs
tests/: integration.rs  unit.rs
tests/fixtures/: anilist_media_details_response.json  anilist_search_response.json  anilist_staff_details_response.json  discover_movies_response.json  discover_tv_response.json  movie_credits_response.json  movie_details_response.json  movie_genres_response.json  movie_images_response.json  movie_recommendations_response.json  movie_watch_providers_response.json  person_details_response.json  popular_movies_response.json  search_movie_response.json  search_multi_response.json  search_person_response.json  search_tv_response.json  top_rated_movies_response.json  trending_movies_response.json  trending_tv_response.json  tv_credits_response.json  tv_details_response.json  tv_episode_details_response.json  tv_genres_response.json  tv_popular_response.json  tv_recommendations_response.json  tv_season_details_response.json  tv_top_rated_response.json  tv_watch_providers_response.json
tests/integration/: anilist_details_test.rs  anilist_discovery_test.rs  anilist_search_test.rs  cache_integration_test.rs  facade_dispatch_test.rs  tmdb_credits_test.rs  tmdb_discovery_movies_test.rs  tmdb_discovery_tv_test.rs  tmdb_episode_test.rs  tmdb_error_scenarios_test.rs  tmdb_movies_test.rs  tmdb_people_test.rs  tmdb_recommendations_test.rs  tmdb_search_test.rs  tmdb_season_test.rs  tmdb_similar_test.rs  tmdb_tv_test.rs  tmdb_watch_providers_test.rs
tests/unit/: anilist_test.rs  builder_test.rs  cache_test.rs  conversion_test.rs  genre_test.rs  image_url_test.rs  pagination_test.rs
