[package]
name = "cameo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Justin Chung <20733699+justin13888@users.noreply.github.com>"]
description = "Unified movie/TV show database SDK for Rust"
repository = "https://github.com/justin13888/cameo"
homepage = "https://github.com/justin13888/cameo"
documentation = "https://docs.rs/cameo"
readme = "README.md"
keywords = ["tmdb", "movies", "tv", "metadata", "sdk"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
exclude = ["scripts/", ".sidecar*", "AGENTS.md", "CLAUDE.md"]

[features]
default = ["tmdb", "anilist", "cache"]
tmdb = []
anilist = []
cache = ["dep:rusqlite", "dep:dirs"]
live-tests = [] # Gate for tests that hit real TMDB API

[dependencies]
# Generated client runtime
progenitor-client = "0.13"
reqwest = { version = "0.13", features = ["json"] }
# Async
tokio = { version = "1", features = ["time", "sync"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "2"
# URL/HTTP helpers
url = "2"
http = "1"
# Logging
tracing = "0.1"
# Cache backend (optional)
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
dirs = { version = "6.0", optional = true }

[build-dependencies]
progenitor = "0.13"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
pretty_assertions = "1"

[[example]]
name = "facade_showcase"
required-features = ["tmdb"]

[[example]]
name = "tmdb_lowlevel"
required-features = ["tmdb"]

[[example]]
name = "anilist_showcase"
required-features = ["anilist"]

[[example]]
name = "cache_showcase"
required-features = ["tmdb", "cache"]

[[example]]
name = "error_handling"
required-features = ["tmdb"]
